<resources>
    <string name="app_name">Compsci</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_feedback">Feedback</string>
    <string name="Login">LOGIN</string>
    <string name="to_inventory"> Inventory</string>
    <string name="to_test">Test</string>
    <string name="to_log">View Log</string>
    <string name="to_scanner">Check Item</string>
    <string name="to_update">Update Asset Information</string>
    <string name="to_monitors">Monitors</string>
    <string name="to_cpus">CPUs</string>
    <string name="to_keyboards">Keyboards</string>
    <string name="to_mice">Mice</string>
    <string name="item_scanned">Item Scanned</string>
    <string name="to_test_page">Test</string>
    <string name="to_test_result">Test Result</string>
    <string name="to_main">Lab Inventory System</string>
    <string name="to_item">Item</string>
    <string name="to_lab_check">Lab Inventory Check</string>
    <string name="to_lab_update">Ensure all Items are in the lab</string>
    <string name="action_total">Total Items</string>
    <string name="lab_tech">Lab Inv. System</string>
</resources>
